--- a/.env.development
+++ b/.env.development
@@ -1,4 +1,6 @@
 # just a flag
-ENV = 'development'
+ENV=development
 # 版本
-VUE_APP_VERSION = 'v1.0.0'
+VUE_APP_VERSION=v1.0.0
+# 游戏包名
+VUE_GAME_PACKAGE_NAME=屠龙天下
