--- a/.env.production
+++ b/.env.production
@@ -1,6 +1,16 @@
 # just a flag
 ENV=production
 # 版本
-VUE_APP_VERSION=v1.0.0
+VUE_APP_VERSION=mxw
 # 页面标题
-VUE_APP_TITLE=屠龙天下
+VUE_APP_TITLE=彩虹猪猪岛
+# 游戏包名
+VUE_APP_GAME_NAME=彩虹猪猪岛
+# 游戏slogan
+VUE_APP_GAME_SLOGAN=无限爆装送扎昆套装，上线即可领取
+# 游戏icon
+VUE_APP_GAME_ICON=https://h5pay.cmaom.com/customize/mxw/20210408/icon.png
+# 安卓端游戏下载地址
+VUE_APP_APK_URL=https://usercenter.cmaom.com/apk/ad/4b36cac308787db3580442156771da5d.apk
+# 苹果端游戏地址
+VUE_APP_IPA_URL=https://h5pay.cmaom.com/ndk/h5sdk/v2.0.0/index.html?game_version=1.0.0&game_name=test&device_id=06CE8AFB-6330-4849-B377-BDB57397A034&ad=08acc0ace636aff78f1bbc36d5cb1a2a&game_id=162&partner_id=2&os_type=ios&game_url=https://web.huanletang.com/apph/public/%3Fappid%3D1%26pid%3D87%26gid%3D1000051%26refer%3D87_1000051_1056_1
