--- a/.env.development
+++ b/.env.development
@@ -13,4 +13,4 @@ VUE_APP_GAME_ICON=https://h5pay.cmaom.com/customize/mxw/20210408/icon.png
 # 安卓端游戏下载地址
 VUE_APP_APK_URL=https://usercenter.cmaom.com/apk/ad/4b36cac308787db3580442156771da5d.apk
 # 苹果端游戏地址
-VUE_APP_IPA_URL=https://h5pay.cmaom.com/ndk/h5sdk/v2.0.0/index.html?game_version=1.0.0&game_name=test&device_id=06CE8AFB-6330-4849-B377-BDB57397A034&ad=08acc0ace636aff78f1bbc36d5cb1a2a&game_id=162&partner_id=2&os_type=ios&game_url=https://web.huanletang.com/apph/public/%3Fappid%3D1%26pid%3D87%26gid%3D1000051%26refer%3D87_1000051_1056_1
+VUE_APP_IPA_URL= http://192.168.10.82:8080?game_version=1.0.0&game_name=test&device_id=mxw162-06CE8AFB-6330-4849-B377-BDB57397A034&ad=08acc0ace636aff78f1bbc36d5cb1a2a&game_id=162&partner_id=2&os_type=ios&game_url=https://web.huanletang.com/apph/public/%3Fappid%3D1%26pid%3D87%26gid%3D1000051%26refer%3D87_1000051_1056_1
